update java and dss