@@ -1,4 +1,4 @@
-FROM maven:3.9.9-eclipse-temurin-17-focal as build
+FROM maven:3.9.9-eclipse-temurin-21-focal as build
 
 WORKDIR /app
 
@@ -10,11 +10,11 @@ COPY service/pom.xml service/pom.xml
 COPY core/src core/src
 COPY service/src service/src
 
-RUN mvn package -P system-jdk
+RUN mvn package
 
 
-FROM eclipse-temurin:17.0.12_7-jre-noble as prod
+FROM eclipse-temurin:21.0.9_10-jre-noble as prod
 WORKDIR /app
 COPY --from=build /app/service/target/service-1.0.0-jar-with-dependencies.jar ./
 
-CMD ["java", "-jar", "--add-exports", "java.base/sun.security.x509=ALL-UNNAMED", "service-1.0.0-jar-with-dependencies.jar"]
+CMD ["java", "-jar", "service-1.0.0-jar-with-dependencies.jar"]
